--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.5.0",
+    "bootstrap": "^5.3.8",
     "cors": "^2.8.5",
     "express": "^5.2.1",
     "nodemon": "^3.1.11"
